Fixing issues after style update

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/enterByGroup.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/enterByGroup.html.twig
@@ -94,7 +94,7 @@
                     </select>
                 </div>
                 <div class="option_width" style="float: left; width: 50px;">
-                    <input type="number" id="number_STDYID" name="number_STDYID" required="required" value="1" style="width: 45px; height: 26px;">
+                    <input type="number" id="number_STDYID" name="number_STDYID" required="required" value="1" style="width: 45px; height: 26px;" disabled="disabled">
                 </div>
                 <div class="option_width" style="float: left; width: 125px;">
                     <input type="checkbox" id="justify_STDYID" name="justify_STDYID" disabled="disabled">
