--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/list.html.twig
@@ -39,7 +39,7 @@
                 <div class="option_width" style="float: left; width: 100px; margin-left: -6px;">
                     {{ pagination.sortable('Genero', 's.gender')|raw }}
                 </div>
-                <div class="right" style="margin-top: -2px;"><a style="margin-top: -6px;" href="#" class="button success-darker tiny" id="btnSearch" name="btnSearch"><span></span>{% trans %}label.search{% endtrans %}</a></div>
+                <div class="right" style="margin-top: -2px;"><a style="margin: 4px 0px 0px 0px;" href="#" class="button success-darker tiny" id="btnSearch" name="btnSearch"><span></span>{% trans %}label.search{% endtrans %}</a></div>
                 <div class="right" style="width: 5px; height: 26px"></div>
                 <div class="option_width right">
                     <input id="searchText" name="searchText" value="{{ text }}">
