--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
@@ -146,11 +146,10 @@
                                         </div>
 
                                         <div style="margin-bottom: 5px;">
-                                        <label style="display: inline-block; width: 100px">{% trans %}label.max_value{% endtrans %}</label>
                                         <input id="subentryFormMaxValue" name="subentryFormMaxValue" style="width: 270px">
                                         </div>
 
-                                        <div style="margin-bottom: 5px;">
+                                        <div>
                                         <label style="display: inline-block; width: 100px">{% trans %}label.order{% endtrans %}</label>
                                         <input id="subentryFormSortOrder" name="subentryFormSortOrder" style="width: 270px">
                                         </div>
