--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Penalty/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Penalty/index.html.twig
@@ -145,49 +145,51 @@ $(function() {
 
 <!-- hidden inline form -->
 <div id="inline">
-    <h2>Registrar nueva sanci&oacute;n</h2>
+    <h3>Registrar nueva sanci&oacute;n</h3>
 
     <form class="customForm" id="createPenaltyForm" name="createPenaltyForm" action="#" method="post">
 
-        <div class="left">
-        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.student{% endtrans %}</span>
-            <select id="studentId" name="studentId">
+        <div class="left" style="margin-right: 10px;">
+        <label style="display: inline-block; width: 150px">{% trans %}label.student{% endtrans %}</label>
+            <select id="studentId" name="studentId" style="width: 250px">
                 {% for student in students %}
                     <option value="{{ student.id }}">{{ student }}</option>
                 {% endfor %}
             </select>
-        </label>
         </div>
         <div class="left">
-            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn new" name="buttonSearchStudent" id="buttonSearchStudent" href="#inline"><a class="modalbox" href="#searchStudentWindow">{% trans %}label.search{% endtrans %}</a></button>
+            <a class="modalbox button success-darker tiny" href="#searchStudentWindow">{% trans %}label.search{% endtrans %}</a>
         </div>
         <div class="clear"></div>
 
-        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.penalty.type{% endtrans %}</span>
-            <select id="penaltyType" name="penaltyType">
+        <div style="margin-bottom: 5px;">
+            <label style="display: inline-block; width: 150px">{% trans %}label.penalty.type{% endtrans %}</label>
+            <select id="penaltyType" name="penaltyType" style="width: 250px">
                 {% for penalty in penalties %}
                 <option value="{{ penalty.id }}">{{ penalty }}</option>
                 {% endfor %}
             </select>
-        </label>
+        </div>
 
-        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.date{% endtrans %}</span>
-            <input type="text" id="date" name="date">
-        </label>
+        <div style="margin-bottom: 5px;">
+            <label style="display: inline-block; width: 150px">{% trans %}label.date{% endtrans %}</label>
+            <input id="date" name="date" style="width: 250px">
+        </div>
 
-        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.comments{% endtrans %}</span>
-            <textarea rows="3" cols="15" id="comments" name="comments"></textarea>
-        </label>
+        <div style="margin-bottom: 5px;">
+            <label style="display: inline-block; width: 150px">{% trans %}label.comments{% endtrans %}</label>
+            <textarea rows="3" cols="15" id="comments" name="comments" style="width: 250px"></textarea>
+        </div>
 
-        <div class="left"><input class="btn cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
-        <div class="left" style="margin-left: 25px;"><input class="btn" style="margin-top: 0px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
+        <div class="left"><input class="button success-darker tiny cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
+        <div class="left" style="margin-left: 25px;"><input class="button success-darker tiny" style="margin-top: 0px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
         <div class="clear"></div>
     </form>
 </div>
 
 <!-- hidden inline form -->
 <div id="searchStudentWindow" name="searchStudentWindow" style="display: none;">
-    <h2>Buscar estudiante</h2>
+    <h3>Buscar estudiante</h3>
     <div style="line-height: 10px; vertical-align: middle;">
         <div class="left">
             <div>
@@ -199,6 +201,6 @@ $(function() {
         <div class="clear"></div>
     </div>
 
-    <div class="left"><input class="btn cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
+    <div class="left"><input class="button success-darker tiny cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
 </div>
 {% endblock %}
