--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/daily_by_route.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/daily_by_route.html.twig
@@ -59,7 +59,7 @@
                         <div class="student_row">
                             <div style="float: left; width: 50px;">{{ student.carne }}</div>
                             <div style="float: left; width: 300px;">{{ student }}</div>
-                            <div style="float: left; width: 60px;">&nbsp;</div>
+                            <div style="float: left; width: 60px;">{{ student.groupyear }}</div>
                             <div style="float: left; width: 300px;">{{ student.dailyDescription }}</div>
                         </div>
                         <div class="clear"></div>
@@ -76,7 +76,7 @@
                     <div class="student_row">
                         <div style="float: left; width: 50px;">{{ student.carne }}</div>
                         <div style="float: left; width: 300px;">{{ student }}</div>
-                        <div style="float: left; width: 60px;">&nbsp;</div>
+                        <div style="float: left; width: 60px;">{{ student.groupyear }}</div>
                     </div>
                     <div class="clear"></div>
                     {% set counter = counter + 1 %}
