--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_route.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/absences_by_route.html.twig
@@ -58,7 +58,7 @@
                         <div class="student_row">
                             <div style="float: left; width: 50px;">{{ student.carne }}</div>
                             <div style="float: left; width: 200px;">{{ student }}</div>
-                            <div style="float: left; width: 60px;">&nbsp;</div>
+                            <div style="float: left; width: 60px;">{{ student.groupyear }}</div>
                             <div style="float: left; width: 300px;">{{ student.dailyDescription }}</div>
                         </div>
                         <div class="clear"></div>
