--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/index.html.twig
@@ -14,10 +14,11 @@
     Tecnotek.StudentShow.translates["relative.not.selected"] = "{% trans %}message.relative.not.selected{% endtrans %}";
     Tecnotek.StudentShow.translates["student.not.selected"] = "{% trans %}message.student.not.selected{% endtrans %}";
     Tecnotek.StudentShow.translates["relative.not.exists"] = "{% trans %}message.relative.not.exists{% endtrans %}";
-
-
+    Tecnotek.UI.translates["confirmDelete"] = "{% trans %}message.ticket.confirm.delete{% endtrans %}";
     Tecnotek.UI.urls["show"] = "{{ path('_expediente_sysadmin_student_show_ticket_simple')}}";
+    Tecnotek.UI.urls["deleteTicketURL"] = "{{ path('_expediente_sysadmin_remove_ticket')}}";
 </script>
+<script type="text/javascript" src="{{ asset('js/tek_exp_tickets.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -37,7 +38,7 @@
                 </div>
 
                 {% for ticket in tickets %}
-                <div class="row userRow {% if loop.index%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}" style="padding: 0px;" rel="{{ ticket.id }}">
+                <div id="ticket_row_{{ ticket.id }}" name="ticket_row_{{ ticket.id }}" class="row userRow {% if loop.index%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}" style="padding: 0px;" rel="{{ ticket.id }}">
                     <div class="option_width" style="float: left; width: 215px; font-size: 10px;">{{ ticket.student }}</div>
                     <div class="option_width" style="float: left; width: 250px; font-size: 10px;">{{ ticket.relative.contact }}</div>
                     <div class="option_width" style="float: left; width: 95px; font-size: 10px;">{{ ticket.date|date("d/M/y H:i:s") }}</div>
